[tool.poetry]
name = "mbtify-ai"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"
aiohttp = "^3.8.1"
pydantic = "^1.9.2"
black = "^22.6.0"
pandas = "^1.4.3"
plotly = "^5.10.0"
scikit-learn = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
